--- a/skill_homeassistant/locale/pl-pl/skill.json
+++ b/skill_homeassistant/locale/pl-pl/skill.json
@@ -13,7 +13,7 @@
     "description": "skill-homeassistant",
     "examples": [
         "Jaki jest status lampy w salonie?",
-        "Włącz światło w kuchni"
+        "Włącz światło w kuchni",
         "Zmień kolor lampy w salonie na niebieski"
     ],
     "tags": [
@@ -26,5 +26,5 @@
         "skill",
         "plugin"
     ],
-    "version": "0.1.0"
+    "version": "0.4.0"
 }
