--- a/skill_homeassistant/locale/pl-pl/skill.json
+++ b/skill_homeassistant/locale/pl-pl/skill.json
@@ -13,8 +13,8 @@
     "description": "skill-homeassistant",
     "examples": [
         "Jaki jest status lampy w salonie?",
-        "W\u0142\u0105cz \u015bwiat\u0142o w kuchni",
-        "Zmie\u0144 kolor lampy w salonie na niebieski"
+        "Włącz światło w kuchni",
+        "Zmień kolor lampy w salonie na niebieski"
     ],
     "tags": [
         "ovos",
